--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext.kotlin_version = '1.3.72'
+
+    ext.retrofit_version = '2.4.0'
+    ext.okhhtp_version = '3.9.0'
+    ext.dagger2_version = '2.16'
+    ext.android_support_version = '29.0.0'
+    ext.gradle_version = '3.1.0'
+
+
     repositories {
+        maven { url "http://jcenter.bintray.com"}
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
