--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyFreeApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.WordsActivity"
-            android:theme="@style/TarnemaStyle"
-            ></activity>
-        <activity android:name=".activities.BookingActivity" />
+
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.HymensActivity"
             android:theme="@style/AddChoirTheme" />
 
-        <activity
-            android:name=".base.baseView.MyBaseActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".activities.BookingActivity" />
+
+        <activity android:name=".activities.WordsActivity"
+            android:theme="@style/TarnemaStyle"/>
 
     </application>
 
