--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-
-        <activity android:name=".activities.AboutActivity"
-            android:theme="@style/TarnemaStyle"/>
-
-
+        <activity android:name=".booking.bookEvent.BookingConfirmationActivity"></activity>
+        <activity
+            android:name=".activities.AboutActivity"
+            android:theme="@style/TarnemaStyle" />
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,13 +35,12 @@
             android:theme="@style/AddChoirTheme" />
         <activity
             android:name=".booking.showEvents.EventListViewActivity"
-            android:theme="@style/AddChoirTheme"
-            android:screenOrientation="portrait" />
-
-        <activity android:name=".booking.bookEvent.BookingEventActivity"
-            android:theme="@style/AddChoirTheme"
-            android:screenOrientation="portrait" />
-
+            android:screenOrientation="portrait"
+            android:theme="@style/AddChoirTheme" />
+        <activity
+            android:name=".booking.bookEvent.BookingEventActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AddChoirTheme" />
         <activity
             android:name=".activities.WordsActivity"
             android:theme="@style/TarnemaStyle" />
