--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-        <activity android:name=".booking.bookEvent.BookingConfirmationActivity"></activity>
+        <activity android:name=".booking.bookEvent.BookingConfirmationActivity"
+            android:theme="@style/TarnemaStyle"
+            ></activity>
         <activity
             android:name=".activities.AboutActivity"
             android:theme="@style/TarnemaStyle" />
