--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".booking.bookEvent.BookingConfirmationActivity"
+            android:name=".booking.BookingConfirmationActivity"
             android:theme="@style/TarnemaStyle" />
         <activity
             android:name=".activities.AboutActivity"
