Add Note in event adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".booking.BookingConfirmationActivity"
-            android:theme="@style/TarnemaStyle" />
+            android:name=".booking.BookingConfirmationActivity" />
         <activity
             android:name=".activities.AboutActivity"
             android:theme="@style/TarnemaStyle" />
