--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.church.virginmaryapp.MyFreeApplication"
+        android:name=".MyFreeApplication"
         android:allowBackup="false"
         android:icon="@drawable/appicon"
         android:label="@string/app_name"
@@ -19,33 +19,37 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-        <activity android:name="com.church.virginmaryapp.activities.SplashActivity">
+        <activity android:name=".followReservations.showFollowEvent.EnterNationalId"
+            android:theme="@style/FollowReservation"
+            ></activity>
+        <activity android:name=".followReservations.showFollowEvent.FollowReservationActivity"
+            android:theme="@style/FollowReservation"
+            ></activity>
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".booking.BookingConfirmationActivity" />
         <activity
-            android:name="com.church.virginmaryapp.booking.BookingConfirmationActivity" />
-        <activity
-            android:name="com.church.virginmaryapp.activities.AboutActivity"
+            android:name=".activities.AboutActivity"
             android:theme="@style/TarnemaStyle" />
-        <activity android:name="com.church.virginmaryapp.activities.HomeActivity">
-        </activity>
+        <activity android:name=".activities.HomeActivity" />
         <activity
-            android:name="com.church.virginmaryapp.activities.HymensActivity"
+            android:name=".activities.HymensActivity"
             android:theme="@style/AddChoirTheme" />
         <activity
-            android:name="com.church.virginmaryapp.booking.showEvents.EventListViewActivity"
+            android:name=".booking.showEvents.EventListViewActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AddChoirTheme" />
         <activity
-            android:name="com.church.virginmaryapp.booking.bookEvent.BookingEventActivity"
+            android:name=".booking.bookEvent.BookingEventActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AddChoirTheme" />
         <activity
-            android:name="com.church.virginmaryapp.activities.WordsActivity"
+            android:name=".activities.WordsActivity"
             android:theme="@style/TarnemaStyle" />
     </application>
 
