--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,22 @@
     <application
         android:name=".MyFreeApplication"
         android:allowBackup="false"
-        android:icon="@drawable/appicon"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-        <activity android:name=".followReservations.showFollowEvent.EnterNationalId"
-            android:theme="@style/FollowReservation"
+        <activity android:name=".followReservations.deleteEvent.EnterCodeActivity"
+                  android:theme="@style/FollowReservation"
             ></activity>
-        <activity android:name=".followReservations.showFollowEvent.FollowReservationActivity"
-            android:theme="@style/FollowReservation"
-            ></activity>
+        <activity
+            android:name=".followReservations.showFollowEvent.EnterNationalId"
+            android:theme="@style/FollowReservation" />
+        <activity
+            android:name=".followReservations.showFollowEvent.FollowReservationActivity"
+            android:theme="@style/FollowReservation" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
